# informatics-mccme-ru

./: .gitignore  .travis.yml  Dockerfile  ProjectHome.md  README.md  README.txt  __init__.py  backupFileset.conf  conv_img.py  conv_users.py  models.py  requirements.txt  setup.py  source_tree_test.py
1c_runner/: CMakeLists.txt  ServiceSoapBinding.nsmap  run_code.cpp  service.1cws?wsdl  service.1cws?wsdl.h  soapC.cpp  soapH.h  soapServiceSoapBindingProxy.cpp  soapServiceSoapBindingProxy.h  soapServiceSoapBindingService.cpp  soapServiceSoapBindingService.h  soapStub.h
articles/: go.md  informatics-tutorial.md  polygon-tutorial.md
contest/ejudge/: configparser.py  ejudge_proxy.py
ejudge-config-editor/: edit_serve_cfg.py  serve_internal.py
model/: __init__.py  comment.py  problem.py  run.py  statement.py  user.py
pynformatics/: __init__.py  models.py  tests.py  testutils.py  views.py  wsgi.py
pynformatics/docs/: stars.txt
pynformatics/frontend/: .gitignore  package-lock.json  package.json  webpack.config.js
pynformatics/model/: __init__.py  action.py  comment.py  contests_statistic.py  course.py  course_module.py  ejudgeContest.py  ejudge_run.py  group.py  group_invite.py  hint.py  ideal_solution.py  log.py  monitor.py  participant.py  problem.py  problem_request.py  pynformatics_run.py  recommendation.___py___  recommendation.py  role.py  (+7 more)
scripts/: populate.py
source_tree/: .gitignore  __init__.py  log.sh  models.py  views.py
utils/: problemParser.py
view/: comment.py  contest.py  problem.py  protocol.py  region2.py  run.py  team_monitor.py  user.py
(+407 files in other folders)
